0.69.1
------
1. Fix glow-style mouse over for combos with coloured buttons.
2. Fix issue with faded menuitems when not rounding.

0.69.0
------
 1. Add option to control whether bottom tabs should have their gradient
    shades inverted.
 2. Config files now stored under $XDG_CONFIG_HOME/qtcurve (e.g. ~/.config/qtcurve)
 3. Fix some issue with 'flat' appearance.
 4. Add an experimental option to hide/unhide menubars using Ctrl-Alt-M.
    Some applications, such as kcalc, do not save the menubar's state - and so this
    wil be reshown when the apps starts. IF this happens, edit ~/.config/qtcurve/stylerc
    and add application name to 'menubarApps', e.g:
        menubarApps=app1,app2,app3
 5. Update versions of XBar menu files - taken from Bespin r652
 6. Disable XBar support for KDevelop - as per Bespin.
 7. Classic style for QWizzard.
 8. Fix issues with Amarok nightly's splitters - where the horizontal
    flag does not seem to be always set.
 9. Fix size of plastik-style mouse over on sliders.
10. Fix issues with left-hand side of editable combos with icons when round<=full
11. Fix compile on OSX - remove unused #include <QX11Info>
12. Fix Arora's new style gradiented location bar.
13. Fix gap between combo button and edit field when round < max.
14. Dont move icon in editable combobox when button pressed.
15. Remove nvidia arrow work-around. (Old plmasma and nvidia releases used to
    have re-draw errors with some arrows.) To re-enable this, use
    -DQTC_OLD_NVIDIA_ARROW_FIX=true at cmake time.
16. Fix shaded listview headers sometime being uninitialised.

0.68.1
------
1. Fix reading, and saving, of 'dark inverted gradient' setting.
2. Better button metrics - especially for buttons with menus.
3. Fix different sized buttons in VirtualBox dialogs. (When determing if
   button should take icon size into account (a la Gtk2), dont use the
   'auto-default' setting, just check if its in a QDialogButtonBox).